# kardashev

./: .bazelrc  .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  ROADMAP-1.0-AND-BEYOND.md  ROADMAP.md  book.toml
.github/workflows/: ci.yml  docs.yml
bazel/rules_kardashev/: defs.bzl
bench/: BUILD.bazel  collatz.c  collatz.kd  fib.c  fib.kd  loop.c  loop.kd  run.sh
compiler/: BUILD.bazel
compiler/include/kardashev/: ast.hpp  ast_clone.hpp  codegen.hpp  emit_c.hpp  lexer.hpp  lint.hpp  parser.hpp  pattern_match.hpp  typecheck.hpp  types.hpp  version.hpp
compiler/src/: ast_clone.cpp  ast_print.cpp  borrow_check.cpp  codegen.cpp  emit_c.cpp  lexer.cpp  lint.cpp  lsp_main.cpp  main.cpp  parser.cpp  pattern_match.cpp  typecheck.cpp  types.cpp
docs/: README.md  SUMMARY.md  language-reference.md  roadmap-enumeration.md  stdlib.md
examples/calc/: BUILD.bazel  main.kd
examples/checksum/: BUILD.bazel  main.kd
examples/csvstats/: BUILD.bazel  main.kd
examples/hello/: util.kd
examples/json/: BUILD.bazel  main.kd
examples/parstats/: main.kd
examples/selfhost/: BUILD.bazel  compile.kd  emit.kd  enumgen.kd  expr.kd  func.kd  funcheck.kd  interp.kd  lexer.kd  scopechk.kd  stmt.kd  structgen.kd  typeck.kd
examples/wordfreq/: BUILD.bazel  main.kd
tests/: BUILD.bazel  borrow_check_test.cpp  codegen_test.cpp  lexer_test.cpp  parser_test.cpp  pattern_match_test.cpp  smoke_test.sh  smoke_test_aggregates.sh  smoke_test_aot.sh  smoke_test_async.sh  smoke_test_async_runtime.sh  smoke_test_bench.sh  smoke_test_cache.sh  smoke_test_calc.sh  smoke_test_cancel_token.sh  smoke_test_capstones.sh  smoke_test_clone.sh  smoke_test_closures.sh  smoke_test_closures2.sh  smoke_test_const.sh  smoke_test_containers.sh  smoke_test_debuginfo.sh  smoke_test_diag.sh  smoke_test_dropleaks.sh  smoke_test_dyn.sh  smoke_test_effects.sh  smoke_test_executor.sh  smoke_test_ffi.sh  smoke_test_ffi_ptrarith.sh  smoke_test_fieldmove.sh  smoke_test_fuzz_arith.sh  smoke_test_fuzz_control.sh  smoke_test_fuzz_div.sh  smoke_test_fuzz_memsafety.sh  smoke_test_generic_traits.sh  smoke_test_hashremove.sh  smoke_test_iter.sh  smoke_test_json.sh  smoke_test_loops.sh  smoke_test_lsp.sh  (+127 more)
