module(
    # Keep `version` in sync with compiler/include/kardashev/version.hpp and
    # CHANGELOG.md. Pre-1.0: each completed roadmap is a MINOR bump (v9 = 0.9.0).
    name = "kardashev",
    version = "0.19.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

llvm = use_extension("//bazel/llvm:extension.bzl", "llvm_extension")
use_repo(llvm, "llvm")
