load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "ast",
    hdrs = ["include/kardashev/ast.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lexer",
    srcs = ["src/lexer.cpp"],
    hdrs = ["include/kardashev/lexer.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser",
    srcs = ["src/parser.cpp"],
    hdrs = ["include/kardashev/parser.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":lexer",
    ],
)

cc_library(
    name = "types",
    srcs = ["src/types.cpp"],
    hdrs = ["include/kardashev/types.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "typecheck",
    srcs = ["src/typecheck.cpp"],
    hdrs = ["include/kardashev/typecheck.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":types",
    ],
)

cc_library(
    name = "codegen",
    srcs = ["src/codegen.cpp"],
    hdrs = ["include/kardashev/codegen.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":typecheck",
        "@llvm//:llvm",
    ],
)

cc_binary(
    name = "kardc",
    srcs = ["src/main.cpp"],
    deps = ["@llvm//:llvm"],
    visibility = ["//visibility:public"],
)
