load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "ast",
    hdrs = ["include/kardashev/ast.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [":types"],
)

# Header-only: the single-source-of-truth toolchain version (kardc --version).
# Declared as its own lib so the Bazel sandbox can find `kardashev/version.hpp`
# (the Makefile.local shim sees it via -Icompiler/include; Bazel needs it as an
# explicit hdrs dep, or main.cpp fails to compile under //compiler:kardc).
cc_library(
    name = "version",
    hdrs = ["include/kardashev/version.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lexer",
    srcs = ["src/lexer.cpp"],
    hdrs = ["include/kardashev/lexer.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser",
    srcs = ["src/parser.cpp"],
    hdrs = ["include/kardashev/parser.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":lexer",
    ],
)

cc_library(
    name = "types",
    srcs = ["src/types.cpp"],
    hdrs = ["include/kardashev/types.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "typecheck",
    srcs = ["src/typecheck.cpp"],
    hdrs = ["include/kardashev/typecheck.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":pattern_match",
        ":types",
    ],
)

cc_library(
    name = "pattern_match",
    srcs = ["src/pattern_match.cpp"],
    hdrs = ["include/kardashev/pattern_match.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":types",
    ],
)

cc_library(
    name = "borrow_check",
    srcs = ["src/borrow_check.cpp"],
    hdrs = ["include/kardashev/borrow_check.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":typecheck",
        ":types",
    ],
)

cc_library(
    name = "codegen",
    srcs = ["src/codegen.cpp"],
    hdrs = ["include/kardashev/codegen.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":pattern_match",
        ":typecheck",
        "@llvm//:llvm",
    ],
)

cc_library(
    name = "ast_print",
    srcs = ["src/ast_print.cpp"],
    hdrs = ["include/kardashev/ast_print.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
        ":types",
    ],
)

# v23 Phase 129: the C-source backend (`--emit-c`). Walks the typechecked AST
# and emits portable C for the i64/bool subset; no LLVM dependency.
cc_library(
    name = "emit_c",
    srcs = ["src/emit_c.cpp"],
    hdrs = ["include/kardashev/emit_c.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
    ],
)

# v24 Phase 132: the lint pass (-W). No LLVM dependency.
cc_library(
    name = "lint",
    srcs = ["src/lint.cpp"],
    hdrs = ["include/kardashev/lint.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":ast",
    ],
)

cc_binary(
    name = "kardc",
    srcs = ["src/main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":borrow_check",
        ":codegen",
        ":emit_c",
        ":lint",
        ":parser",
        ":typecheck",
        ":version",
        "@llvm//:llvm",
    ],
)

cc_binary(
    name = "kard-lsp",
    srcs = ["src/lsp_main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":borrow_check",
        ":parser",
        ":typecheck",
    ],
)

cc_binary(
    name = "kardfmt",
    srcs = ["src/fmt_main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_print",
        ":parser",
    ],
)
